<resources>
    <string name="app_name">Edit App</string>
    <string name="fullName">Full Name</string>
    <string name="editButton">Edit Profile</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userName">User Name</string>
    <string name="gender">Gender (Only M or F)</string>
    <string name="age">Age</string>
    <string name="phone">Phone Number</string>
    <string name="bio">Bio</string>

    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
</resources>
