<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.editprofile.UserInfoEditActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstName"
                    android:textSize="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:id="@+id/activity_user_info_edit_userFirstName"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName"
                    android:textSize="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:id="@+id/activity_user_info_edit_userLastName"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userName"
                    android:textSize="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:id="@+id/activity_user_info_edit_userName"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:maxLines="1"
                    android:maxLength="1"
                    android:digits="MF"
                    android:id="@+id/activity_user_info_edit_gender"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:maxLines="1"
                    android:maxLength="3"
                    android:inputType="phone"
                    android:digits="0123456789"
                    android:id="@+id/activity_user_edit_info_edit_age"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="8dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textSize="15dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:id="@+id/activity_user_info_edit_bio"
                    android:inputType="textMultiLine"
                    android:maxEms="26"
                    tools:layout_editor_absoluteY="0dp"
                    tools:layout_editor_absoluteX="8dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_user_info_edit_saveButton"
                        android:text="@string/saveButton"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/activity_user_info_edit_cancelButton"
                        android:text="@string/cancelButton"/>
            </LinearLayout>
    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
